--- a/src/App.css
+++ b/src/App.css
@@ -305,3 +305,69 @@ body.page-is-changing::after, body.page-is-changing::before {
 .close:after {
   transform: rotate(-45deg);
 }
+
+.form{
+  margin-left: 5%;
+  width: 90%;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
+  border-radius: 20px;
+  height: 400px;
+  background: #FFFFFF;
+  color: #000000;
+  font-family: 'roboto', Arial, sans-serif;
+  font-weight:400; 
+  font-style:normal;
+  font-size: 18px;
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  outline: none;
+  text-decoration: none;
+}
+
+.form-line {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+}
+.form-label {
+  width: 100px;
+}
+.form-input {
+  width: 200px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid;
+  height: 70%;
+  font-weight:900; 
+  color: #000000;
+  outline: none;
+  font-size: 18px;
+  text-align: center;
+}
+
+.form-submit {
+  display: inline-block;
+  border-radius: 2rem;
+  border: 2px solid #F44336;
+  padding: .2rem .6rem;
+  color: #F44336;
+  background: 0 0;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-top: 20px;
+  height: auto;
+  text-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  text-decoration: none;
+}
+
+.form-submit:hover {
+
+  border: 2px solid #F44336;
+  color: #fff;
+  background: #F44336;
+}
