--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   position: relative;
   top: 5vmin;
   /*animation: App-logo-spin infinite 20s linear;*/
-  height: 150px;
+  height: 100px;
   pointer-events: none;
 }
 
@@ -41,6 +41,12 @@ body {
   /*justify-content: center;*/
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.map {
+  margin-top:100px;
+  height: 400px;
+  pointer-events: none;
 }
 
 #Background {
